==================================================================
30/11-2014 EMWHBR

*) R1A02

*) Added functionality to verify the contents of chip flash program
   memory against a specified file in binary/HEX format.

*) Tested using target microcontroller AT89S52@12MHz.

==================================================================
16/11-2014 EMWHBR

*) R1A01

*) Original

*) Tested using target microcontroller AT89S52@12MHz.