@@ -1,0 +1,23 @@
+// ************************************************************************
+// *                                                                      *
+// * Copyright (C) 2014 Bonden i Nol (hakanbrolin@hotmail.com)            *
+// *                                                                      *
+// * This program is free software; you can redistribute it and/or modify *
+// * it under the terms of the GNU General Public License as published by *
+// * the Free Software Foundation; either version 2 of the License, or    *
+// * (at your option) any later version.                                  *
+// *                                                                      *
+// ************************************************************************
+
+#ifndef __DELAY_H__
+#define __DELAY_H__
+
+#include <stdint.h>
+
+/////////////////////////////////////////////////////////////////////////////
+//               Function prototypes
+/////////////////////////////////////////////////////////////////////////////
+extern void delay_initialize(void);
+extern void delay_usleep(uint16_t usec);
+
+#endif // __DELAY_H__
